syntax = "proto3";

package keyring.v1;

option go_package = "github.com/zondax/keyringPoc/keyring/types";

import "keyringPoc/keyring/v1/request.proto";

service KeyringService {
    rpc Backend(BackendRequest) returns (BackendResponse);

    rpc Key(KeyRequest) returns (KeyResponse);
    rpc NewAccount(NewAccountRequest) returns (NewAccountResponse);

    rpc Sign(NewSignRequest) returns (NewSignResponse);
}